5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1594_1802.log
== TEST (2019-04-04 16:15:37) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(((5**0.5)*(d1**0.5))+3.14**(d2/3))

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:16:12) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(((5**0.5)*(d1**0.5))+3.14**(d2/3))
print(dano)

-- OUTPUT:
12.09566797749979
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:17:54) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(((5**0.5)*(d1**0.5))+3.14**(d2/3)))
print(dano)

-- OUTPUT:
187.9043320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:18:21) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(((5**0.5)*(d1**0.5))+3.14**(d2/3)))
print(dano)

-- OUTPUT:
187.9043320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:19:14) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(((5**1/2)*(d1**1/2))+3.14**(d2/3)))
print(dano)

-- OUTPUT:
188.8904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:20:49) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(((5**(1/2))*(d1**(1/2)))+3.14**(d2/3)))
print(dano)

-- OUTPUT:
187.9043320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:21:39) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(((5**(1/2))*(d1**(1/2)))+3.14**(d2/3)))
print(round(dano,2)

-- ERROR:
File "XXXX", line 7
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:22:17) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(((5**(1/2))*(d1**(1/2)))+3.14**(d2/3)))
print=(round(dano, 2)

-- ERROR:
File "XXXX", line 7
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:22:26) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(((5**(1/2))*(d1**(1/2)))+3.14**(d2/3)))
print(dano)

-- OUTPUT:
187.9043320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:24:44) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(5**(1/2)*d1**(1/2))+3.14**(d2/3))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:26:49) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2)*d1**(1/2))+3.14159**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:27:02) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2)*(d1**(1/2))+3.14159**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:27:26) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2)*(d1**(1/2))+(3.14159**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:28:48) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(((5**(1/2)*(d1**(1/2)))+(3.14159**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:29:34) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2))*(d1**(1/2))+(3.14159**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:30:42) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2))*(d1**(1/2))+(3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:31:14) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2))*(d1**(1/2))+(3.14**(d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:31:17) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2))*(d1**(1/2))+(3.14**(d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:31:39) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=var1-((5**(1/2))*(d1**(1/2))+(3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:32:27) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=var1-((5**(1/2))*(d1**(1/2))+((3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:32:40) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2))*(d1**(1/2))+((3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:32:45) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2))*(d1**(1/2))+((3.14**(d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:33:31) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2)))*(d1**(1/2))+((3.14**(d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:34:03) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2)))*((d1**(1/2))+((3.14**(d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:34:35) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-5**(1/2)*d1**(1/2)+(3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:34:53) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-5**(1/2)*d1**(1/2)+3.14**(d2/3))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:35:27) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(5**(1/2))*(d1**(1/2))+(3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:35:36) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=((var1-(5**(1/2))*(d1**(1/2))+(3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:35:47) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(5**(1/2))*(d1**(1/2))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:36:23) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-(5**(1/2))*(d1**(1/2))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:36:47) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=((var1)-(5**(1/2))*(d1**(1/2))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:37:25) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=((var1)-((5**(1/2))*(d1**(1/2)))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:38:39) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=((var1)-(((5**(1/2))*(d1**(1/2)))+(3.14**(d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:38:47) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=((var1)-((5**(1/2))*(d1**(1/2)))+(3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:38:58) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2))*(d1**(1/2)))+(3.14**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:39:50) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5**(1/2))*(d1**(1/2)))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:41:11) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5*d1)**(1/2))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:41:28) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5*d1)**(1/2))+(3.14**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.191999
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
207.6235320225002
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
304.38237442494835
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
499.2282763730033
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:41:31) 
-- CODE:
from math import *
var1=float(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5*d1)**(1/2))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:41:50) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=(var1-((5*d1)**(1/2))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207.6235320225002
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:45:00) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=int(var1-((5*d1)**(1/2))+(3.14**(d2/3)))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:45:18) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=int(var1-((5*d1)**(1/2))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:45:56) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=int(var1-((5*d1)**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:48:04) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=int((var1-((5*d1)**(0.5))+(pi**(d2/3)))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:48:16) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=int(var1-((5*d1)**(0.5))+(pi**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:48:50) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:49:06) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:49:17) 
-- CODE:
from math import *
var1=int(input("pontos vitais: "))
d1=int(input("d1: "))
d2=int(input("d2: "))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.271259
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:49:35) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:49:45) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.213221
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:50:12) 
-- CODE:
from math import *
var1=float(input(""))
d1=float(input(""))
d2=float(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:50:21) 
-- CODE:
from math import *
var1=float(input(""))
d1=float(input(""))
d2=float(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.167996
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:50:42) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:50:50) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:51:06) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.146077
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:52:09) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((var1-(5*d1**(0.5))+(pi**(d2/3))))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:52:17) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((var1-(5*d1**(0.5))+(pi**(d2/3))))
print(dano)

-- EXECUTION TIME:
0.157581
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:52:24) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:52:33) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.124441
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:53:32) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:53:40) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:53:43) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.182016
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:54:00) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=float(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204.86960440108936
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:54:13) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:55:28) 
-- CODE:
from math import *
var1=float(input(""))
d1=float(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:55:37) 
-- CODE:
from math import *
var1=float(input(""))
d1=float(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.197011
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:55:56) 
-- CODE:
from math import *
var1=float(input(""))
d1=float(input(""))
d2=float(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:56:03) 
-- CODE:
from math import *
var1=float(input(""))
d1=float(input(""))
d2=float(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.148731
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:56:23) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.151713
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:56:29) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.131971
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:57:15) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:57:23) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.138042
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:58:43) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(5*d1**(0.5))+(pi**(d2/3))
print(var1-dano)

-- OUTPUT:
185.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:58:58) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(5*d1**(0.5))+(pi**(d2/3))
print(var1-dano)

-- OUTPUT:
185.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 16:59:52) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(5*d1**(0.5))+(pi**(d2/3))
print int(var1-dano)

-- EXECUTION TIME:
0.197683
-- ERROR:
  File "/home/codebench/codes/1594/1802/main.py", line 6
    print int(var1-dano)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:00:19) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:00:29) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.192844
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:01:09) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:01:19) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.218209
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:01:47) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(5*d1**(0.5))+(pi**(d2/3))
print(var1-dano)

-- OUTPUT:
185.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:02:07) 
-- CODE:
from math import *
var1=float(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**(0.5))+(pi**(d2/3))
print(var1-dano)

-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:03:01) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**(0.5))+(pi**(d2/3))
print(var1-dano)

-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:03:25) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**(0.5))+(pi**(d2/3))
print int(var1-dano)

-- ERROR:
File "XXXX", line 6
    print int(var1-dano)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:03:35) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**(0.5))+(pi**(d2/3))
print(int var1-dano)

-- ERROR:
File "XXXX", line 6
    print(int var1-dano)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:03:48) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**(0.5))+(pi**(d2/3))
print(var1-dano)

-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:04:16) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1((5*d1)**(0.5))+(pi**(d2/3)))
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int(var1((5*d1)**(0.5))+(pi**(d2/3)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:04:33) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1(5*d1)**(0.5))+(pi**(d2/3)
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:04:41) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1)**(0.5))+(pi**(d2/3)
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:04:53) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**(0.5))+(pi**(d2/3)
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:05:00) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**(0.5))+(pi**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:05:04) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:05:23) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:05:49) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:05:57) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.143685
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:06:16) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+((pi)**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:06:23) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+((pi)**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.152301
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:07:07) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi)**(d2/3))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:07:14) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**(0.5))+(pi)**(d2/3))
print(dano)

-- EXECUTION TIME:
0.149258
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:08:02) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**(0.5))+(pi)**(d2/3))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:08:31) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**(0.5))+(pi)**(d2/3)
print(var1-dano)

-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:09:02) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**0.5)+(pi)**(d2/3)
print(var1-dano)

-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:09:50) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**0.5)+((pi)**d2/3)
print(var1-dano)

-- OUTPUT:
-122.4630645251014
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:10:11) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**0.5)+((pi)**(d2/3))
print(var1-dano)

-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:10:37) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)(**0.5))+((pi)**(d2/3))
print(var1-dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int((5*d1)(**0.5))+((pi)**(d2/3))
TypeError: int object argument after ** must be a mapping, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:10:51) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**0.5)+((pi)**(d2/3))
print(var1-dano)

-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:11:14) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+((pi)**(d2/3)))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:11:58) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi)**(d2/3))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:12:37) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+((pi)**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:12:45) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:13:12) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1(**0.5))+(pi**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:13:35) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:13:57) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi**(d2/3)))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:14:34) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi**d2/3))
print(dano)

-- OUTPUT:
518
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:14:58) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi**(d2/3)))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:15:33) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**0.5)+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:15:44) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**0.5)+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.264721
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:16:03) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1(**0.5))+(pi**(d2/3)))
print(dano)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    dano=int(var1-(5*d1(**0.5))+(pi**(d2/3)))
TypeError: int object argument after ** must be a mapping, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:16:28) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**0.5)+(pi**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:16:42) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**0.5)+(pi**d2/3)
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:17:03) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**0.5)+(pi**(d2/3)))
print(dano)

-- OUTPUT:
204
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:17:13) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(5*d1**0.5)+(pi**(d2/3)))
print(dano)

-- EXECUTION TIME:
0.146303
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
204
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
297
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
496
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:17:42) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi**(d2/3)))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:18:11) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi)**(d2/3))
print(dano)

-- OUTPUT:
207
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:18:52) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-(((5*d1)**0.5)+(pi)**(d2/3))
print(dano)

-- ERROR:
File "XXXX", line 6
    print(dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:19:05) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(var1-((5*d1)**0.5)+(pi)**(d2/3))
print(dano)

-- EXECUTION TIME:
0.21626
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
207
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
304
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
499
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:19:24) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int((5*d1)**0.5)+(pi)**(d2/3)
print(var1-dano)

-- OUTPUT:
188.13039559891064
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:20:02) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(((5*d1)**0.5)+(pi)**(d2/3)
print(var1-dano)

-- ERROR:
File "XXXX", line 6
    print(var1-dano)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 17:20:35) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(((5*d1)**0.5)+(pi)**(d2/3))
print(var1-dano)

-- OUTPUT:
188
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 17:20:43) 
-- CODE:
from math import *
var1=int(input(""))
d1=int(input(""))
d2=int(input(""))
dano=int(((5*d1)**0.5)+(pi)**(d2/3))
print(var1-dano)

-- EXECUTION TIME:
0.178361
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
